# mini_langsmith

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dem.ipynb  docker-compose.yml  feature.md  pyproject.toml  requirements.txt
collector/: main.py  models.py  queue.py  redis_queue.py  worker.py
dashboard/: .dockerignore  Dockerfile  middleware.ts  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/admin/dlq/: loading.tsx  page.tsx
dashboard/app/api/admin/dlq/: route.ts
dashboard/app/api/cost/nodes/: route.ts
dashboard/app/api/paths/: route.ts
dashboard/app/api/projects/: route.ts
dashboard/app/api/runs/: route.ts
dashboard/app/cost/: loading.tsx  page.tsx
dashboard/app/paths/: loading.tsx  page.tsx
dashboard/app/projects/: loading.tsx  page.tsx
dashboard/app/signin/: page.tsx
dashboard/app/traces/: loading.tsx  page.tsx
dashboard/app/traces/[id]/: loading.tsx  page.tsx
dashboard/components/: CostTrendChart.tsx  CreateProjectForm.tsx  FilterBar.tsx  FlowGraph.tsx  LatencyChart.tsx  NodeCostTable.tsx  ProjectSubNav.tsx  SankeyDiagram.tsx  SessionCostList.tsx  Sidebar.tsx  SparklineChart.tsx  TraceTable.tsx  TraceTree.tsx
dashboard/lib/: auth.ts  db.ts  graph-transform.ts  redis.ts  sankey-transform.ts  session.ts
db/: connection.py  init.sql  schema.sql
db/migrations/: 001_add_branch_decision.sql  002_drop_parent_fk.sql  003_add_projects_table.sql  004_add_sparkline_index.sql  005_add_user_id_to_projects.sql
sdk/: tracer_callback.py  tracer_callback.ts
(+5 files in other folders)
