[project]
name = "tracer"
version = "0.1.0"
description = "Self-hosted LLM observability platform — mini LangSmith"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "redis>=5.0.0",
    "arq>=0.26.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "langchain-core>=0.2.0",
    "python-dotenv>=1.0.0",
    "ipykernel>=7.3.0",
    "tavily>=1.1.0",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.5",
    "langchain>=1.3.9",
    "bs4>=0.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["collector*", "db*", "sdk*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
